syntax = "proto3";

package com.road.yishi.proto.army;

message BoxMsg {
  string boxId = 1;
  int32 userId = 2;
  int32 grade = 3;
  int32 mapId = 4;
  int32 x = 5;
  int32 y = 6;
  int32 type = 7;
}
