syntax = "proto3";

package com.road.yishi.proto.army;

message MapBossMsg {
  int32 count1 = 1;
  int32 count2 = 2;
  int32 count3 = 3;
  repeated int32 bosslist = 4;
  int32 leftFogTime = 5;
}
