syntax = "proto3";

package com.road.yishi.proto.army;

message MapBossQuestMsg {
  int32 mapId = 1;
}
