syntax = "proto3";

package com.road.yishi.proto.army;

message MapBoxMsg {
  repeated int32 boxlist = 1;
}
