syntax = "proto3";

package com.road.yishi.proto.army;

message WildLandMsg {
  int32 id = 1;
  int32 mapId = 2;
  int32 posX = 3;
  int32 posY = 4;
  int32 templateId = 5;
  int32 type = 6;
  int32 occupyPlayerId = 7;
  string occupyPlayerName = 8;
  string occupyLeagueName = 9;
  int32 state = 10;
  int32 refreshTime = 11;
  string simpleHeroInfo = 12;
  repeated int32 armyPawn = 13;
  repeated int32 curArmyId = 14;
  repeated int32 allNodeInfo = 15;
  int32 level = 16;
  repeated int32 occupyNodeInfo = 17;
  int32 occupyGuildId = 18;
  string startFightTime = 19;
}
